--- a/código flix/js/index.html
+++ b/código flix/js/index.html
@@ -20,7 +20,7 @@
       <a href="#">Filmes</a>
       <a href="#">Séries</a>
       <a href="#">Support</a>
-      <button class="btnLogin-popup">login</button>
+      <button class="btnLogin-popup">Login</button>
      </nav>
    </header>
    
@@ -29,7 +29,7 @@
 
   
   
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 
 
